--- a/app/src/main/res/layout/event_detail_info.xml
+++ b/app/src/main/res/layout/event_detail_info.xml
@@ -30,12 +30,12 @@
             app:layout_constraintTop_toTopOf="@+id/textView18" android:fontFamily="@font/quicksand"/>
     <TextView
             android:text="Fee"
-            android:layout_width="71dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView22"
             android:fontFamily="@font/quicksand" android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="@+id/textView18" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView18" app:layout_constraintEnd_toEndOf="@+id/textView18"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView18"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
             android:id="@+id/textView25" app:layout_constraintStart_toStartOf="@+id/textView22"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView22" android:fontFamily="@font/quicksand"
-            android:textColor="@android:color/black" app:layout_constraintEnd_toEndOf="@+id/textView22"/>
+            android:textColor="@android:color/black"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
