--- a/app/src/main/res/layout/event_detail_tlp.xml
+++ b/app/src/main/res/layout/event_detail_tlp.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content"
+                                             android:background="#20000000">
 
+    <TextView
+            android:text="Contact :"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView17"
+            android:fontFamily="@font/quicksand" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" android:textColor="@android:color/black"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/infos_textView" app:layout_constraintStart_toEndOf="@+id/textView17"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="@+id/textView17" android:fontFamily="@font/quicksand"
+            android:textColor="@android:color/black" app:layout_constraintEnd_toStartOf="@+id/call_Btn"
+            android:layout_marginEnd="24dp"/>
+    <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:srcCompat="@android:drawable/sym_action_call"
+            android:id="@+id/call_Btn" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintTop_toTopOf="@+id/infos_textView"
+            app:layout_constraintBottom_toBottomOf="@+id/infos_textView"/>
 </android.support.constraint.ConstraintLayout>
