--- a/app/src/main/res/layout/event_main_row.xml
+++ b/app/src/main/res/layout/event_main_row.xml
@@ -11,7 +11,8 @@
             android:layout_height="100dp" app:srcCompat="@drawable/mainlogin"
             android:id="@+id/banner_imageView"
             app:layout_constraintStart_toStartOf="parent"
-            android:scaleType="centerCrop" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:scaleType="centerCrop" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"/>
     <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -29,16 +30,16 @@
             android:lines="2"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:textSize="14sp"
-            android:fontFamily="@font/quicksand" android:textColor="@android:color/white"
-            app:layout_constraintTop_toTopOf="@+id/banner_imageView" android:textStyle="bold"/>
+            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/white"
+            app:layout_constraintTop_toTopOf="@+id/banner_imageView"/>
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/sdate_text"
             android:textColor="@android:color/white" android:fontFamily="@font/quicksand_light"
             app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
             app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView"
-    />
+            app:layout_constraintEnd_toEndOf="@+id/eventTitle_textView"/>
     <TextView
             android:text="Rp"
             android:layout_width="wrap_content"
@@ -46,29 +47,30 @@
             android:id="@+id/textView23" android:fontFamily="@font/quicksand_light"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="@+id/imageView16"
-            app:layout_constraintTop_toBottomOf="@+id/sdate_text"/>
+            app:layout_constraintTop_toBottomOf="@+id/sdate_text" android:layout_marginTop="4dp"/>
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/price_text"
             android:fontFamily="@font/quicksand_light" android:textColor="@color/colorAccent"
             app:layout_constraintStart_toEndOf="@+id/textView23"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView23"/>
+            app:layout_constraintTop_toTopOf="@+id/textView23" app:layout_constraintEnd_toEndOf="@+id/sdate_text"
+    />
     <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp" app:srcCompat="@drawable/lokasi"
+            android:layout_width="16dp"
+            android:layout_height="16dp" app:srcCompat="@drawable/lokasi"
             android:id="@+id/imageView16"
             app:layout_constraintStart_toStartOf="@+id/eventTitle_textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView23" android:layout_marginTop="2dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView23" android:layout_marginTop="4dp"/>
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/lokasi_textView"
             app:layout_constraintStart_toEndOf="@+id/imageView16"
             app:layout_constraintBottom_toBottomOf="@+id/imageView16" android:fontFamily="@font/quicksand_light"
             android:textColor="@android:color/white" app:layout_constraintTop_toTopOf="@+id/imageView16"
-    />
+            app:layout_constraintEnd_toEndOf="@+id/price_text"/>
     <View
             android:layout_width="0dp"
             android:layout_height="0.5dp"
