--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="#000000">
+                                             >
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
@@ -15,90 +15,9 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/profileEdit_recyclerView"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            app:srcCompat="@drawable/user123"
-            android:id="@+id/profile_imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>
-
-    <TextView
-            android:text="User Name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            app:fontFamily="@font/quicksand"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/profile_imageView"/>
-
-    <EditText
-            android:id="@+id/name_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/quicksand_bold"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" android:singleLine="true"/>
-
-    <TextView
-            android:text="About"
-            android:layout_width="0dp"
-            android:layout_height="14dp"
-            android:id="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            app:fontFamily="@font/quicksand"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/name_textView"/>
-
-    <EditText
-            android:id="@+id/about_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/quicksand"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" android:singleLine="true"/>
-    <Button
-            android:text="Sign Out"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/signout_button"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp"
-            android:background="@drawable/rounded_button" android:textAllCaps="false"
-            android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
