--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             >
+                                             android:background="#101010">
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
@@ -15,9 +15,59 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
-    <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/profileEdit_recyclerView"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp" app:srcCompat="@drawable/user123"
+            android:id="@+id/profile_edit_ppImage" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"/>
+    <TextView
+            android:text="User Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2" android:textSize="12sp"
+            app:layout_constraintTop_toTopOf="@+id/profile_edit_ppImage" app:layout_constraintStart_toEndOf="@+id/profile_edit_ppImage"
+            android:layout_marginStart="16dp" android:fontFamily="@font/quicksand_light"
+            android:textColor="@android:color/darker_gray"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/userName_editText"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/quicksand_bold"
+            android:textColor="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+    <TextView
+            android:text="About"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/userName_editText"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/userName_editText"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray" android:fontFamily="@font/quicksand_light"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/about_editText"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="@+id/userName_editText" android:fontFamily="@font/quicksand_bold"
+            android:textColor="@android:color/white" android:textSize="14sp"/>
+    <TextView
+            android:text="Sign Out"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:id="@+id/signOut_textView" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/about_editText"
+            app:layout_constraintEnd_toEndOf="@+id/about_editText"
+            android:fontFamily="@font/quicksand_bold" android:textColor="@android:color/black"
+            android:background="@drawable/rounded_button"
+    android:gravity="center_vertical"/>
 
 </android.support.constraint.ConstraintLayout>
