--- a/app/src/main/res/layout/post_main_welcome.xml
+++ b/app/src/main/res/layout/post_main_welcome.xml
@@ -7,15 +7,6 @@
                                              android:background="#000000">
 
     <TextView
-            android:text="PhotoGigs Timeline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/name_textView"
-            app:layout_constraintTop_toBottomOf="@+id/name_textView"
-            android:textSize="24sp" android:textColor="@android:color/white" android:textStyle="bold"
-            android:fontFamily="@font/quicksand_bold"/>
-    <TextView
-            android:text="name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/name_textView" app:layout_constraintStart_toStartOf="parent"
@@ -23,11 +14,12 @@
             android:textColor="@color/colorAccent" android:textSize="18sp" android:textStyle="bold"
             android:fontFamily="@font/quicksand"/>
     <TextView
-            android:text="date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/today_tV" app:layout_constraintStart_toStartOf="@+id/textView12"
-            app:layout_constraintTop_toBottomOf="@+id/textView12" android:textSize="10sp"
-            android:textColor="@android:color/darker_gray" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/quicksand_light"/>
+            android:id="@+id/today_tV" app:layout_constraintStart_toStartOf="@+id/name_textView"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/quicksand_light"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/name_textView" android:layout_marginBottom="8dp"/>
 </android.support.constraint.ConstraintLayout>
